# Blue-Drake

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: acoustics.md  actuation.md  architecture.md  compatibility.md  controls.md  custom_sensors.md  custom_vehicles.md  dynamics.md  environment.md  experiment_tooling.md  fidelity.md  getting_started.md  hardware_targets.md  manipulation.md  planning.md  public_api.md  reference_cases.md  release_contract.md  releasing.md  sensors.md  validation.md
examples/: custom_vehicle.py  rov_gripper.py  station_keeping.py
scenarios/: custom_sensors.toml  fleet_showcase.toml  mixed_marine.toml
src/blue_drake/: __init__.py  __main__.py  _version.py  acoustics.py  actuators.py  cli.py  control_systems.py  controls.py  drake_systems.py  hydrodynamics.py  identifiers.py  inspection.py  manipulation.py  manipulation_systems.py  planning.py  provenance.py  run_artifacts.py  scenario.py  sensor_systems.py  sensors.py  simulation.py  validation.py  vehicles.py
tests/: test_acoustics.py  test_actuators.py  test_cli.py  test_control_systems.py  test_controls.py  test_hydrodynamics.py  test_inspection.py  test_manipulation.py  test_manipulation_systems.py  test_planning.py  test_public_api.py  test_scenario.py  test_sensors.py  test_simulation.py  test_validation.py  test_vehicles.py
