[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blue-drake-marine"
version = "0.1.0"
description = "Developer-oriented marine robotics simulation built on Drake"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "drake==1.45.0; platform_system == 'Darwin'",
  "drake==1.54.0; platform_system != 'Darwin'",
  "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.12",
]

[project.scripts]
blue-drake = "blue_drake.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/blue_drake"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "UP", "W"]
ignore = [
  # Drake-style names encode frames and SI units: p_WB, force_N, wrench_B.
  "N802",
  "N803",
  "N806",
  "N815",
]
