[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "blue-drake-marine"
dynamic = ["version"]
description = "Developer-oriented marine robotics simulation built on Drake"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { file = "LICENSE" }
authors = [
  { name = "Blue Drake contributors" },
]
keywords = [
  "drake",
  "marine-robotics",
  "robotics-simulation",
  "underwater-robotics",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: BSD License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=2.0,<3",
]

[project.optional-dependencies]
drake-current = [
  "drake==1.54.0",
]
drake-sonoma = [
  "drake==1.45.0; platform_system == 'Darwin'",
]
dev = [
  "build>=1.2,<2",
  "pytest>=8,<10",
  "ruff>=0.12,<1",
  "twine>=5,<7",
]

[project.scripts]
blue-drake = "blue_drake.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/blue_drake"]

[tool.hatch.version]
path = "src/blue_drake/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "UP", "W"]
ignore = [
  # Drake-style names encode frames and SI units: p_WB, force_N, wrench_B.
  "N802",
  "N803",
  "N806",
  "N815",
]
